refactor code
I refactor some code about new java version and some unnecessary
objects that I leant from effective java item6.

--Make progress every day!

(cherry picked from commit f1a0d190dd3bc84d5760cd44d5bd051ddca3a31b)