@@ -64,8 +64,8 @@ public class GStringTest extends GroovyTestCase {
     }
 
     public void testEqualsAndHashCode() {
-        DummyGString a = new DummyGString(new Object[]{new Integer(1)});
-        DummyGString b = new DummyGString(new Object[]{new Long(1)});
+        DummyGString a = new DummyGString(new Object[]{Integer.valueOf(1)});
+        DummyGString b = new DummyGString(new Object[]{Long.valueOf(1)});
         Comparable c = new DummyGString(new Object[]{new Double(2.3)});
 
         assertTrue("a == b", a.equals(b));
