@@ -29,7 +29,7 @@ import java.util.Map;
  */
 public class DummyBean {
     private String name = "James";
-    private Integer i = new Integer(123);
+    private Integer i = Integer.valueOf(123);
     private Map dynamicProperties = new HashMap();
     private Point point;
     private PropertyChangeSupport changeSupport = new PropertyChangeSupport(this);
